crates/lashlang/src/runtime/snapshots/lashlang__runtime__tests__lashlang_diagnostic_corpus.snap
---
source: crates/lashlang/src/runtime/tests.rs
assertion_line: 312
expression: "cases.join(\"\\n\\n---\\n\\n\")"
---
parse_unsupported_while
unsupported `while` loop; use bounded `for` loops over ranges or lists
--> line 2, column 1
while x < 3 {
^
hint: use bounded `for` loops over ranges or lists

---

parse_inline_if
unexpected `if`
--> line 1, column 8
submit if true { 1 }
       ^
hint: use `cond ? yes : no` for inline conditionals

---

parse_inline_for
unexpected `for`
--> line 1, column 9
submit [for x in [1] { x }]
        ^
hint: `for` is a statement. Put it on its own line, not inside an expression or record literal.

---

parse_loop_control_outside_loop
`break` can only be used inside a `for` loop
--> line 1, column 1
break
^

---

parse_duplicate_type_field
expected unique field name, found duplicate field `ok`
--> line 1, column 38
Payload = Type { nested: { ok: bool, ok: str } }
                                     ^

---

parse_removed_parallel_keyword
unexpected `parallel`
--> line 1, column 1
parallel {
^

---

runtime_bad_wrapper_unwrap
`?` unwrapped failed tool result: boom
--> line 1, column 1
submit ({ ok: false, error: "boom" })?
^
hint: remove `?` and inspect `.ok` or `.error` when you need to handle failures

---

runtime_failed_resource_operation_unwrap
`?` unwrapped failed resource operation: boom
--> line 1, column 1
submit (await TOOL.default.err({})?)
^

---

runtime_invalid_await_handle
`?` unwrapped failed tool result: expected handle record
--> line 1, column 1
submit (await 1)?
^
hint: remove `?` and inspect `.ok` or `.error` when you need to handle failures

---

runtime_read_only_projected_assignment
`history` is a read-only projected binding
--> line 1, column 1
history = []
^
hint: copy the projected value into a new variable before changing it

---

runtime_invalid_validate_type_argument
`validate` requires a Type literal as the second argument
--> line 1, column 1
submit validate({ ok: true }, "not a type")
^
hint: pass `Type { ... }` or a variable that holds a Type literal

---

runtime_validation_failure
validation failed: $.count: expected integer, got string
--> line 1, column 1
submit validate({ count: "x" }, Type { count: int })
^

---

runtime_unknown_name
unknown name `missing`
--> line 1, column 1
submit missing
^

---

runtime_unknown_builtin
unknown builtin `nope`
--> line 1, column 1
submit nope()
^
